tests/sources/invalid/arrays/array_element_assignment_missing_expr.fire
// Missing expression after an array-element assignment.
fn main() -> int32 {
    arr: int32[] = [1, 2];
    arr[0] = ;  //~ ERROR FS-PARSE-0012 @14
//~^ ERROR FS-PARSE-0010 @15
    return 0;
}
